--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  background-color: aliceblue;
 }
 
 html {
@@ -364,11 +365,18 @@ article .icon {
   background: rgb(250, 250, 250);
 }
 
-.project-img {
+/* .project-img {
   border-radius: 2rem;
   width: 90%;
   height: 90%;
+} */
+.project-img {
+  width: 100%; /* Makes the image responsive within its container */
+  height: 200px; /* Set a fixed height */
+  object-fit: cover; /* Ensures the image maintains aspect ratio while filling the area */
+  border-radius: 10px; /* Optional: for rounded corners */
 }
+
 
 .project-title {
   margin: 1rem;
